# bitdefernder-rust

./: .gitignore  .gitingore  README.md  Rocket.toml
hello/: Cargo.toml
hello/src/: lib.rs  main.rs
hello/static/: index.html
