[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.12"
mimalloc = "0.1.41"
rmp-serde = "1.3.0"
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde-jsonlines = "0.5.0"
serde_json = "1.0.115"
zip = "0.6.6"
